# clowl

./: .gitignore  README.md  architecture-v0.3.md  benchmark-plan.md  clak.py  clowl-schema.json  error-codes.md  examples-v0.2.md  examples.md  prompt-v0.1-hybrid.md  pyproject.toml  qa-prompt-round1.md  qa-prompt-round2.md  qa-review-2026-02-27.md  spec-v0.1.md  spec-v0.2.md  state-machine.md  system-prompt-v0.2.md  system-prompt.md  translator.py
clowl/: __init__.py
clowl-ts/: README.md  package-lock.json  package.json  tsconfig.json
clowl-ts/src/: index.ts  message.ts  schema.ts  state-machine.ts  translator.ts  types.ts
clowl-ts/tests/: message.test.ts  state-machine.test.ts  translator.test.ts
schema/: clowl-coordination.schema.json  clowl-s.schema.json
