[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clowl"
version = "0.2.0"
description = "CLowl - A structured communication language for AI agent-to-agent messaging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Oscar Sterling Agency", email = "oscar@oscarsterlingagency.com"}
]
keywords = ["clowl", "agent", "ai", "protocol", "communication", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://clowl.dev"
Repository = "https://github.com/oscarsterling/clowl"
Documentation = "https://clowl.dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["clowl*"]
